<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_slate_blue"

    tools:context=".presentation.ExploreActivity"
    >

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/imageView1_frame"
        android:layout_width="fill_parent"
        android:layout_height="600dp"
        android:background="@color/white"
        android:padding="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageView1"
            android:src="@drawable/initial_canvas"
            android:layout_width="fill_parent"
            android:layout_height="600dp"
            android:adjustViewBounds= "true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </FrameLayout>

    <TextView
        android:id="@+id/imageOrientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintLeft_toRightOf="@+id/rotateImgButton"
        />
    <Button
        android:id="@+id/rotateImgButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        android:visibility="gone"
        />


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:visibility="visible"
        app:itemIconTint="@drawable/drawer_item_color"
        app:itemTextColor="@drawable/drawer_item_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <com.nitrogen.myme.presentation.textEditor.MotionView
        android:id="@+id/main_motion_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/gallery_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_image" />

            <Button
                android:id="@+id/from_template_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_template" />

            <Button
                android:id="@+id/add_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_text" />

            <Button
                android:id="@+id/save_meme_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_meme" />
        </LinearLayout>

    </com.nitrogen.myme.presentation.textEditor.MotionView>

    <LinearLayout
        android:id="@+id/main_motion_text_entity_edit_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/text_entity_font_change_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/text_entity_font_change_description"
            android:src="@drawable/ic_text_fields" />

        <ImageButton
            android:id="@+id/text_entity_edit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/text_entity_edit"
            android:src="@drawable/ic_mode_edit" />

        <ImageButton
            android:id="@+id/delete_text_entity_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/delete_text_button"
            android:src="@drawable/ic_trash" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>