<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ExploreActivity"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/header_save_meme"
                android:textSize="64sp" />

            <EditText
                android:id="@+id/edit_text_meme_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:paddingTop="100dp"
                android:textSize="32sp" />

            <LinearLayout
                android:id="@+id/tag_list_save_meme_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/select_tags"
                    android:textSize="40sp" />

                <!-- Tag checkboxes are dynamically generated here, in SaveMemeActivity class -->

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/accept_save_meme_button"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginEnd="5dp"
                    android:textSize="24sp"
                    android:text="@string/ok"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/cancel_save_meme_button"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="5dp"
                    android:textSize="24sp"
                    android:text="@string/cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
