<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"

    >
    <RelativeLayout
        android:id="@+id/drag_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_drag_handle"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/drag_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/drag_indicator">

        <TextView
            android:id="@+id/panelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bottom_border"
            android:text="@string/default_meme_name"
            android:textSize="20pt"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/drag_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/drag_name"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:text="@string/tags_label"
            android:layout_marginStart="16dp"
            android:textSize="30sp" />

        <GridView
            android:id="@+id/panelTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="106dp" />
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/drag_Author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/drag_tags">
            <TextView
                android:id="@+id/panelAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>